--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,14 +2,15 @@ body{
     margin: 0;
     padding: 0;
     list-style: none;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif !important;
     background: url(../img/car.jpeg)no-repeat;
     -webkit-background-size:100% 100%;
     -moz-background-size:100% 100%;
     -o-background-size:100% 100%;
     background-size: 100%;
-    font-weight: bold;
+    font-size: 18px;    
 }
+
 .container{
     width: 100vw;
     margin-top: 30px;
@@ -26,9 +27,7 @@ h2#timer{
 h2{
     margin-top: 20px;
     box-shadow: 8px 10px 8px #888888;
-    font-family: 'Roboto', sans-serif;
     color: #fff;
-    font-size: 18px;
     font-weight: bold;
 }
 .form-group{
@@ -37,16 +36,10 @@ h2{
     display: flex;
     flex-direction: column;
 }
-p{
-    font-size: 18px;
-    font-weight: bold;
-    font-family: 'Roboto', sans-serif;   
-}
 
 .label-form{
     margin-top: 10px;
     color: #fff;
-    font-size: 18px;
 }
 
 .input-form{
@@ -67,7 +60,6 @@ p{
     height: 32px;
     font-weight: bold;
     outline:none;
-    
 }
 
 .btn-form:focus, button:active {
@@ -87,5 +79,7 @@ p{
 }
 
 #table{
-    width: 100%vw; 
+    width: 100%vw;
+
 }
+
